feat: Basically finish layout; Add imprint&privacy policy; Exclude them from search.

--- a/themes/yeldirium/languages/default.yml
+++ b/themes/yeldirium/languages/default.yml
@@ -1,9 +1,13 @@
 menu:
   home: Home
+  blog: Blog
   repositories: Repositories
   about: About
   contact: Contact
   archive: Archive
+footer:
+  imprint: Imprint
+  privacy-policy: Privacy Policy
 navigation:
   toggle: Toggle Navigation
 search:
