feat: Add feed to social links.

--- a/themes/yeldirium/languages/default.yml
+++ b/themes/yeldirium/languages/default.yml
@@ -6,6 +6,7 @@ menu:
   contact: Contact
   archive: Archive
 footer:
+  feed: Feed
   imprint: Imprint
   privacy-policy: Privacy Policy
 navigation:
