feat: Fully style and configure archive and post list per tag/category.

--- a/themes/yeldirium/languages/default.yml
+++ b/themes/yeldirium/languages/default.yml
@@ -9,6 +9,10 @@ footer:
   feed: Feed
   imprint: Imprint
   privacy-policy: Privacy Policy
+headline:
+  tag: Tag
+  category: Category
+  archive_for: Archive for
 navigation:
   toggle: Toggle Navigation
   older: Older
