feat: Add alt text to profile picture.

--- a/themes/yeldirium/languages/default.yml
+++ b/themes/yeldirium/languages/default.yml
@@ -17,6 +17,8 @@ navigation:
   toggle: Toggle Navigation
   older: Older
   newer: Newer
+profile:
+  avatar_alt_text: Profile picture
 pagination:
   previous: Previous
   next: Next
